--- a/landingpage/create-modal.html
+++ b/landingpage/create-modal.html
@@ -4,7 +4,7 @@
 <div class="modal-body" id="modal-body">
 	<form name="vm.frmCreate" novalidate>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-1">
+			<div class="col-md-10 col-md-offset-1">
 
 			  	<div class="form-group" ng-class="{'has-error': vm.frmCreate.title.$invalid && vm.frmCreate.withError }">
 			        <label class="control-label col-md-3 col-sm-3 col-xs-12">Title</label>
@@ -45,13 +45,34 @@
 
 
 			  	<div class="form-group">
-
+<!-- 
 			  		<file-field ng-model="vm.movieDetails.uploadFile" preview="previewImage" class="col-md-3 col-sm-3 col-xs-12 btn btn-success">Select File</file-field>
 			  		<div class="col-md-9 col-sm-9 col-xs-12 form-group">
 						<img ng-src="{{previewImage}}">
-					</div>
+					</div> -->
+			        <label class="control-label col-md-3 col-sm-3 col-xs-12">Banner</label>
+			        <div class="col-md-9 col-sm-4 col-xs-12 form-group">
+				  		<file-field ng-model="vm.movieDetails.uploadFile" preview="previewImage" class="col-md-4 col-sm-3 col-xs-12 btn btn-success">Select File</file-field>
+				  		<div class="form-group">
+							<img ng-src="{{previewImage}}" class="img-responsive" ng-class="{'img-thumbnail':previewImage}">
+						</div>
+			        </div>
 			  	</div>
 
+			  	<div class="form-group">
+<!-- 
+			  		<file-field ng-model="vm.movieDetails.uploadFile" preview="previewImage" class="col-md-3 col-sm-3 col-xs-12 btn btn-success">Select File</file-field>
+			  		<div class="col-md-9 col-sm-9 col-xs-12 form-group">
+						<img ng-src="{{previewImage}}">
+					</div> -->
+			        <label class="control-label col-md-3 col-sm-3 col-xs-12">Frame Photo</label>
+			        <div class="col-md-9 col-sm-4 col-xs-12 form-group">
+				  		<file-field ng-model="vm.movieDetails.uploadFrame" preview="previewFrame" class="col-md-4 col-sm-3 col-xs-12 btn btn-success">Select File</file-field>
+				  		<div class="form-group">
+							<img ng-src="{{previewFrame}}" class="img-responsive" ng-class="{'img-thumbnail':previewFrame}">
+						</div>
+			        </div>
+			  	</div>
 			</div>
 			<div class="col-md-8 col-md-offset-1" ng-show="vm.response.status">
 				<div class="text-center" ng-class="{'alert alert-success':vm.response.status == 200,'alert alert-danger':vm.response.status != 200}" ng-bind="vm.response.message">
