--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -46,6 +46,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
  <!-- DC Tabs JS -->
 <!--<script type="text/javascript" src="http://www.dreamtemplate.com/dreamcodes/tabs/js/tsc_tabs.js"></script>-->
 <link rel="stylesheet" href="css/tsc_tabs.css" type="text/css" media="all" />
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-select/0.20.0/select.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
+
 </head>
 <body ng-controller="MovieCtrl as mc">
 <div class="header">
@@ -56,7 +61,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		    </div>
 			  <div class="nav-wrap">
 					<ul class="group" id="example-one">
-			           <li class="current_page_item"><a href="index.html"><i class="glyphicon glyphicon-user"></i> Sign In</a></li>
+			           <li class="current_page_item">
+       			           	<a href="#" ng-click="mc.signIn()" ng-if="!mc.user.isSignedOn"><i class=""></i> Sign-in with Google</a>
+       			           	<a href="#" ng-click="mc.signOut()" ng-if="mc.user.isSignedOn">
+       			           	<img class="img-circle" src="{{mc.user.photo}}" alt="{{mc.user.name}}" style="width:3em;"/>
+       			           	 Sign-out</a>
+			           </li>
 			        </ul>
 			  </div>
  			<div class="clear"></div>
@@ -72,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		                <div class="field">
 			                 <label>Find a Movie:</label>
 			                  <select class="select2">
-			                    <option>Movie list</option>
+			                    <option ng-repeat="movie in mc.movieList">{{movie.title}}</option>
 			                  </select>
 			            </div>
 		       </fieldset>
@@ -118,15 +128,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="wrap">
 		<div class="content-top">
 				<div class="col-md-3">
-					<h3>Movie News</h3>
+					<h3>Blockbuster Movies</h3>
+					<div class="form-group" ng-if="mc.user.isSignedOn">
+						<button class="btn btn-success" ng-click="mc.addMovie()"><i class="	glyphicon glyphicon-plus"></i> Add New Movie</button>
+					</div>
 					<div class="content-left form-group" ng-class="{'movie-selected':movie.selected}" ng-repeat="movie in mc.movieList">
 						<a href="" ng-click="mc.selectMovie(movie)">
 							<div class="listimg listimg_1_of_2">
-								 <img src="https://p.w3layouts.com/demos/cinema/web/images/r4.jpg" alt=""/>
+								 <img src="{{movie.frame}}" alt="movie.title"/>
 							</div>
 							<div class="text list_1_of_2">
 								  <div class="extra-wrap">
-		                                <div class="data" ng-bind="movie.showingdate"></div>
+		                                <div class="data" ng-bind="movie.showingdate | date : 'MMMM d, y'"></div>
 		                                <a href="#" class="color"><strong ng-bind="movie.title"></strong></a><br>
 		                                <span class="text-top" ng-bind="movie.desc"></span>
 		                          </div>
@@ -137,16 +150,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<a href="#" class="link2">See all</a>
 				</div>
 				<div class="col-md-9">
+					<br><br><br><br>
 					<div class="container">
 					  <div class="panel panel-info">
 					    <div class="panel-heading">Seats</div>
-					    <div class="panel-body">
-					    	<div class="col" ng-repeat="col in mc.cols">
-					    		<div class="form-group" ng-repeat="item in mc.items | filter:{'col':col}">
-				    				<button type="button" ng-click="mc.seatAction(item)" class="btn" ng-class="{'btn btn-success':item.status == 'AVAILED','btn':item.status == 'NA'||item.status == ''}">{{item.id}}</button>
-					    		</div>
+					    <div class="panel-body text-center">
+					    	<div>
+						    	<div class="col" ng-repeat="col in mc.cols">
+						    		<div class="form-group" ng-repeat="item in mc.items | filter:{'col':col}">
+					    				<button type="button" ng-click="mc.seatAction(item)" class="btn" ng-class="{'btn btn-success':item.status == 'AVAILED','btn':item.status == 'NA'||item.status == ''}">{{item.id}}</button>
+						    		</div>
+						    	</div>
 					    	</div>
-					    	<button ng-click="mc.addMovie()" class="btn">New Movie</button>
 					    </div>
 					  </div>
 					</div>
@@ -213,27 +228,62 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="/angular-bootstrap-file-field.min.js"></script>
 <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-select/0.20.0/select.min.js"></script>
 <script>
 (function(){
 	angular
-		.module('movieapp',['firebase','ui.bootstrap','bootstrap.fileField'])
+		.module('movieapp',['firebase','ui.bootstrap','bootstrap.fileField','ui.select'])
 		.controller('MovieCtrl',MovieCtrl)
 		.controller('CreateMovieModalInsCtl',CreateMovieModalInsCtl)
+		.service('MovieSrvc', MovieSrvc)
 
-		MovieCtrl.$inject = ['$scope','$firebaseObject','$firebaseArray', '$uibModal']
-		function MovieCtrl($scope, $firebaseObject, $firebaseArray, $uibModal){
+		MovieCtrl.$inject = ['$scope','$firebaseObject','$firebaseArray', '$uibModal', 'MovieSrvc']
+		function MovieCtrl($scope, $firebaseObject, $firebaseArray, $uibModal, MovieSrvc){
 			var vm = this;
+
+			vm.auth = firebase.auth();
+			vm.auth.onAuthStateChanged(user =>{
+				vm.onAuthStateChanged(user);
+			});
 
 			const ref = firebase.database().ref();
 			const movieListRef = ref.child('movie');
 			const seatsRef = ref.child('seats');
 			const seatsPerMovieRef = ref.child('seatspermovie');
 
+			vm.movieList = $firebaseArray(movieListRef.limitToFirst(4));
 
-			movieListRef.on('value',snap=> {
-				vm.movieList = $firebaseArray(movieListRef);
-			})
+			vm.signIn = function(){
+				var provider = new firebase.auth.GoogleAuthProvider();
+				vm.auth.signInWithPopup(provider).then(function(result) {
+				  var token = result.credential.accessToken;
+				  var user = result.user;
+				  // ...
+				}).catch(function(error) {
+				  alert(error.code + ': '+error.message);
+				});
+			};
+
+			vm.onAuthStateChanged = function(user){
+				vm.user = {};
+				if (user) {
+					vm.user.isSignedOn = true;
+					vm.user.name = user.displayName;
+					vm.user.email = user.email;
+					vm.user.photo = (user.photoURL || '/images/profile_placeholder.png');
+				}
+				$scope.$apply();
+			};
+
+			vm.signOut = function(){
+				vm.auth.signOut().then(function() {
+					vm.user = {};
+					$scope.apply();
+			  	// Sign-out successful.
+				}).catch(function(error) {
+				  // An error happened.
+				});
+			};
 
 			vm.seatRange = function(col, row) {
 				col = col || 1;
@@ -252,34 +302,45 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			vm.rows = [{id:1,status:'AVAILED'},{id:2,status:''}]
 
 			vm.seatAction = function(seat){
-				if (seat.status == 'AVAILED') {
-					seat.status = 'NA';
-				} else if(!seat.status || seat.status == 'NA') {
-					seat.status = 'AVAILED';
-				} else {
-					seat.status = ''
-				}
+				if (vm.user.isSignedOn) {
+					var seatDet = {};
+					var data = {
+						seatid:seat.id,
+						movieid:vm.selectedMovieId
+					};
 
-			 	var seatActionRef = seatsRef.child(vm.selectedMovieId+'/'+seat.id);
-				seatActionRef.update({
-					status:seat.status
-				});
-				// seatActionRef.on('child_changed',snap=>{
-				// 	vm.selectMovie(vm.selectedMovieId);
-				// });
+					MovieSrvc.getSeatDet(data)
+					.then(response =>{
+						seatDet = response.data;
+						if (seatDet.reservedby == vm.user.email || !seatDet.reservedby) {
+							seat.email = vm.user.email;
+							if (seat.status == 'AVAILED') {
+								seat.status = 'NA';
+								seat.email = '';
+							} else if(!seat.status || seat.status == 'NA') {
+								seat.status = 'AVAILED';
+							} else {
+								seat.status = ''
+								seat.email = '';
+							}						
+						 	var seatActionRef = seatsRef.child(vm.selectedMovieId+'/'+seat.id);
+							seatActionRef.update({
+								status:seat.status,
+								reservedby:seat.email
+							});					
+						} else {
+							alert('Already availed.');
+						}
+					},error=>{alert('Something wrong.')});
+
+				} else {
+					alert('Can\'t reserved seat(s). Sign In first.')
+				}
 			};
 
 			vm.addMovie = function() {
 				var newMovieKey = movieListRef.push().key;
 				var newMovieRef = movieListRef.child(newMovieKey)
-				var newMovie = {
-					title:'Avengers',
-					banner:'/banner',
-					framebanner:'/frame',
-					showingdate:'August 10, 2017',
-					desc:'Blah blah blah'
-				};
-				vm.seatRange(5,5);
 
 	          	var modalInstance = $uibModal.open({
 		            controller:'CreateMovieModalInsCtl',
@@ -300,25 +361,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		            vm.getCategoryTypeList(data);
 	          	},function (){});
 
-				// newMovieRef.set(newMovie);
-				// newMovieRef.once('child_added', snap=>{
-				// 	var newMovieSeatRef = seatsRef.child(newMovieKey);
-				// 	var newseatsPerMovie = seatsPerMovieRef.child(newMovieKey)
-
-				// 	angular.forEach(vm.items, function(v, k){
-				// 		var newMovieSeatNoRef = newMovieSeatRef.child(v.id);
-				// 		newMovieSeatNoRef.set({
-				// 			'status':v.status,
-				// 			'reservedby':'default'
-				// 		});
-				// 	})
-
-				// 	newseatsPerMovie.set({
-				// 		row:3,
-				// 		col:5
-				// 	});
-				// 	console.log("from movie added!");
-				// });
 			};
 
 			vm.selectMovie = function(data){
@@ -338,8 +380,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					for (var i = 1; i <= vm.seats.col; i++) {
 						vm.cols.push(i);
 					}
-					console.log(vm.cols.length);
-					// vm.seatRange(vm.seats.col, vm.seats.row);
 				});
 
 				movieSeatsRef.once('value', snap=>{
@@ -376,8 +416,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			// });
 
 			ref.once('value',snap =>{
-				console.log(snap.key);
-				console.log(snap.val());
+				// console.log(snap.key);
+				// console.log(snap.val());
 			})
 
 		}
@@ -404,7 +444,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				if (vm.frmCreate.$valid) {
 					vm.frmCreate.withError = false;
 
-					const newMovieStorageRef = movieStorageRef.child(newMovieKey);
+					const newMovieBannerStorageRef = movieStorageRef.child('/banner/'+newMovieKey);
 					var metadata = {
 						contentType:data.uploadFile.type
 					};
@@ -412,40 +452,50 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					var dataCopy = angular.copy(data);
 					dataCopy.showingdate =  $filter('date')(dataCopy.showingdate,'yyyy-MM-dd');
 
-					newMovieStorageRef.put(data.uploadFile, metadata).then(snap=>{
-						dataCopy.banner = snap.downloadURL;
+					newMovieBannerStorageRef.put(data.uploadFile, metadata).then(snap=>{
+						var newMovieFrameStorageRef = movieStorageRef.child('/frame/'+newMovieKey);
+						newMovieFrameStorageRef.put(data.uploadFrame, metadata).then(snapframe=>{
 
-						var newMovieRef	= movieRef.child(newMovieKey);
-						var data = {
-							'showingdate':dataCopy.showingdate,
-							'banner':dataCopy.banner,
-							'title':dataCopy.title,
-							'desc':dataCopy.desc,
-							'col':dataCopy.col,
-							'row':dataCopy.row
-						}
-						newMovieRef.set(data);
+							dataCopy.banner = snap.downloadURL;
+							dataCopy.frame = snapframe.downloadURL;
 
-						var newSeatsPerMovieRef = seatsPerMovieRef.child(newMovieKey);
-						var seats = {
-							col:data.col,
-							row:data.row
-						};
-						newSeatsPerMovieRef.set(seats);
+							var newMovieRef	= movieRef.child(newMovieKey);
+							var data = {
+								'showingdate':dataCopy.showingdate,
+								'banner':dataCopy.banner,
+								'frame':dataCopy.frame,
+								'title':dataCopy.title,
+								'desc':dataCopy.desc,
+								'col':dataCopy.col,
+								'row':dataCopy.row
+							}
+							newMovieRef.set(data,error =>{
+								if (error) {
+									alert(error.message);
+								} else {
 
-						vm.seatRange(data.col,data.row);
-						var newMovieSeatRef = seatsRef.child(newMovieKey);
-						angular.forEach(vm.items, function(v, k){
-							var newMovieSeatNoRef = newMovieSeatRef.child(v.id);
-							newMovieSeatNoRef.set({
-								'status':v.status,
-								'reservedby':'default'
+									var newSeatsPerMovieRef = seatsPerMovieRef.child(newMovieKey);
+									var seats = {
+										col:data.col,
+										row:data.row
+									};
+									newSeatsPerMovieRef.set(seats);
+
+									vm.seatRange(data.col,data.row);
+									var newMovieSeatRef = seatsRef.child(newMovieKey);
+									angular.forEach(vm.items, function(v, k){
+										var newMovieSeatNoRef = newMovieSeatRef.child(v.id);
+										newMovieSeatNoRef.set({
+											'status':v.status,
+											'reservedby':''
+										});
+									})
+									$uibModalInstance.close();
+								}
 							});
 						})
-
 					});
 
-					$uibModalInstance.close();
 				} else {
 					vm.frmCreate.withError = true;
 				};
@@ -464,6 +514,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					};
 				};
 			};
+		}
+
+		MovieSrvc.$inject = ['$http']
+		function MovieSrvc($http){
+			var domain = 'https://onlinereservation-2lx.firebaseio.com';
+			return {
+				getSeatDet:function(data){
+					return $http({
+						'method':'GET',
+						'url':domain+'/seats/'+data.movieid+'/'+data.seatid+'.json',
+						headers:{'Content-Type':'application/json'}
+					})
+				}
+			}
 		}
 })();
 </script>
